--- a/JenkinsFile
+++ b/JenkinsFile
@@ -7,8 +7,9 @@ node {
 
     stage('Build') {
         echo "Building in progress...."
-
+def mavenHome = tool 'LocalMaven'
 	if(isUnix()){
+	  env.PATH = "${mavenHome}/bin;${env.PATH}"
 	  sh "mvn clean install"
 	}
     }
