--- a/JenkinsFile
+++ b/JenkinsFile
@@ -6,8 +6,9 @@ node {
 
 
     stage('Build') {
-        echo "Building in progress...."
-def mavenHome = tool 'LocalMaven'
+    echo "Building in progress...."
+    def mavenHome = tool name: 'LocalMaven'
+    String jdktool = tool name: "jdk8", type: 'hudson.model.JDK'
 	if(isUnix()){
 	  env.PATH = "${mavenHome}/bin;${env.PATH}"
 	  sh "mvn clean install"
